# sixel_interpreter

./: LICENSE  README.md  pyproject.toml
samples/: fern.sixel
sixel_interpreter/: __init__.py  color.py  command.py  constants.py  interpreter.py  parser.py  state.py  vis.py
